# finance-mcp

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  codecov.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/finance_mcp/: __init__.py  __main__.py  server.py  settings.py
src/finance_mcp/data/: analytics.py  calculators.py  errors.py  models.py  yfinance_client.py
src/finance_mcp/prompts/: analysis.py
src/finance_mcp/tools/: _dispatch.py  analytics.py  calculators.py  equities.py
tests/: conftest.py  test_analytics_logic.py  test_analytics_tools.py  test_calculators_logic.py  test_calculators_tools.py  test_equities_tools.py  test_prompts.py  test_server.py  test_yfinance_client.py
