[project]
name = "finance-mcp"
version = "0.1.0"
description = "An MCP server providing finance tools: a yfinance wrapper, computed analytics, and financial calculators."
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
dependencies = [
    "fastmcp>=3.0",
    "pydantic>=2.7",
    "pydantic-settings>=2.0",
]

[project.scripts]
finance-mcp = "finance_mcp.server:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.11",
    "bandit>=1.7",
    "pre-commit>=3.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/finance_mcp"]

[tool.ruff]
target-version = "py313"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "W", "F", "B", "I", "UP", "SIM", "RUF"]

[tool.mypy]
python_version = "3.13"
strict = true
files = ["src", "tests"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=finance_mcp --cov-report=term-missing --cov-fail-under=90"

[tool.coverage.run]
source = ["finance_mcp"]
branch = true
omit = ["src/finance_mcp/__main__.py"]

[tool.coverage.report]
exclude_also = ["if __name__ == .__main__.:"]

[tool.bandit]
exclude_dirs = ["tests"]
