[project]
name = "mcp-finance"
version = "0.2.0"
description = "An MCP server providing finance tools: a yfinance wrapper, computed analytics, and financial calculators."
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Josh Caponigro" }]
maintainers = [{ name = "Josh Caponigro" }]
keywords = [
  "mcp",
  "model-context-protocol",
  "fastmcp",
  "finance",
  "yfinance",
  "stocks",
  "market-data",
  "financial-analytics",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Financial and Insurance Industry",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.13",
  "Topic :: Office/Business :: Financial",
  "Topic :: Office/Business :: Financial :: Investment",
  "Topic :: Scientific/Engineering :: Information Analysis",
  "Typing :: Typed",
]
dependencies = [
  "fastmcp>=3.0",
  "pydantic>=2.7",
  "pydantic-settings>=2.0",
  "yfinance>=0.2.40",
]

[project.urls]
Homepage = "https://github.com/JoshCap20/finance-mcp"
Repository = "https://github.com/JoshCap20/finance-mcp"
Issues = "https://github.com/JoshCap20/finance-mcp/issues"

[project.scripts]
mcp-finance = "finance_mcp.server:main"

[dependency-groups]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.24",
  "pytest-cov>=5.0",
  "ruff>=0.6",
  "mypy>=1.11",
  "bandit>=1.7",
  "pre-commit>=3.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/finance_mcp"]

[tool.ruff]
target-version = "py313"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "W", "F", "B", "I", "UP", "SIM", "RUF"]

[tool.mypy]
python_version = "3.13"
strict = true
files = ["src", "tests"]

[[tool.mypy.overrides]]
module = ["yfinance.*", "pandas.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=finance_mcp --cov-report=term-missing --cov-fail-under=90"

[tool.coverage.run]
source = ["finance_mcp"]
branch = true
omit = ["src/finance_mcp/__main__.py"]

[tool.coverage.report]
exclude_also = ["if __name__ == .__main__.:"]

[tool.bandit]
exclude_dirs = ["tests"]
